# AIStart

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  codex-prompt.md  pyproject.toml
.ai/context/: business-context.md  product-context.md  stack-decisions.md  technical-constraints.md  user-personas.md
.ai/decisions/: README.md
.ai/iterations/: 2026-03-25-2300-aistart-v1-foundation.md  2026-03-26-0105-readme-launch-polish.md  README.md
.ai/memory/: anti-drift.md  open-questions.md  stable-facts.md
.ai/project/: current-phase.md  glossary.md  mission.md  non-goals.md  scope.md  success-criteria.md
.ai/prompts/: task-template.md
.ai/tasks/: backlog.md  current.md  done.md
apps/api/app/: __init__.py  main.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/health/: route.ts
docs/architecture/: overview.md
infra/: README.md
scripts/: drift_check.py  init_project.py  log_iteration.py  new_adr.py  new_task.py
tests/: test_api_health.py  test_bridge_files.py  test_governance_scripts.py  test_init_project.py  test_structure_contract.py
